--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,20 @@
   line-height: 26px;
 }
 
+.paragraph {
+  color: rgba(19, 24, 23, 0.7);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.card-title {
+  color: #5a5a5d;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+}
 /* header styles */
 
 header {
@@ -136,4 +150,62 @@ input {
   margin-left: 90px;
   width: 540px;
   height: 550px;
+}
+
+/* main content styles */
+
+.destination {
+  color: #131318;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 800;
+}
+
+.banner-picture {
+  margin-left: 135px;
+  padding: 48px;
+}
+
+.banner-picture img {
+  margin: 10px;
+}
+
+/* facts-card-styles */
+
+.facts-card-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.card-1 {
+  margin-left: 135px;
+  padding: 30px;
+  width: 570px;
+  height: 280px;
+  border-radius: 16px;
+  border: 1px solid rgba(251, 181, 99, 0.2);
+  background: rgba(251, 181, 99, 0.05);
+}
+
+.card-2 {
+  padding: 30px;
+  width: 570px;
+  height: 280px;
+  border-radius: 16px;
+  border: 1px solid rgba(41, 206, 246, 0.2);
+  background: rgba(41, 206, 246, 0.05);
+}
+
+.card-3 {
+  padding: 30px;
+  width: 570px;
+  height: 280px;
+  border-radius: 16px;
+  border: 1px solid rgba(233, 68, 68, 0.2);
+  background: rgba(233, 68, 68, 0.05);
+}
+
+.card{
+  margin: 20px 430px;
 }
